Fix mobile menu horizontal scroll bug

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,6 +33,7 @@
     height: 100%;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
   }
 
   body {
